--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "babel-eslint": "8.2.3",
         "babel-preset-env": "1.6.1",
         "eslint-plugin-import": "2.11.0",
+        "eslint-plugin-react": "7.7.0",
         "gulp": "3.9.1",
         "gulp-babel": "7.0.1",
         "gulp-bump": "3.1.1",
