--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "babel-core": "6.26.0",
         "babel-eslint": "8.2.3",
         "babel-preset-env": "1.6.1",
+        "babel-preset-react-app": "3.1.1",
         "eslint-plugin-import": "2.11.0",
         "eslint-plugin-react": "7.7.0",
         "gulp": "3.9.1",
