--- a/package.json
+++ b/package.json
@@ -4,28 +4,31 @@
     "description": "",
     "main": "dist/index.js",
     "scripts": {
-        "build": "gulp",
+        "release": "gulp4 release",
+        "release:minor": "gulp4 release:minor",
+        "release:major": "gulp4 release:major",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "react": "16.3.2",
+        "react": "16.4.1",
         "axios": "0.18.0",
-        "styled-components": "3.2.6",
-        "sourcemapped-stacktrace": "1.1.8",
-        "eslint": "4.19.1"
+        "styled-components": "3.3.2",
+        "sourcemapped-stacktrace": "1.1.8"
     },
     "devDependencies": {
         "babel-core": "6.26.0",
         "babel-eslint": "8.2.3",
         "babel-preset-env": "1.6.1",
         "babel-preset-react-app": "3.1.1",
+        "eslint": "4.19.1",
         "eslint-plugin-import": "2.11.0",
         "eslint-plugin-react": "7.7.0",
-        "gulp": "3.9.1",
+        "gulp4": "4.0.2",
         "gulp-babel": "7.0.1",
         "gulp-bump": "3.1.1",
+        "gulp-allbin": "git+https://bitbucket.org/allbin/gulp-allbin.git#v0.0.6",
         "gulp-eslint": "4.0.2"
     }
 }
