--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
-package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.vscode/settings.json
+
+.vscode
+
+package-lock.json
