--- a/package.json
+++ b/package.json
@@ -1,55 +1,53 @@
 {
-    "name": "error-reporting",
-    "version": "1.0.0",
-    "main": "dist/index.js",
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "gulp build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "storybook": "start-storybook -p 6060",
-        "release:patch": "gulp buildAndReleasePatch",
-        "release:minor": "gulp buildAndReleaseMinor",
-        "release:major": "gulp buildAndReleaseMajor"
-    },
-    "dependencies": {
-        "sourcemapped-stacktrace": "1.1.11"
-    },
-    "devDependencies": {
-        "axios": "0.19.2",
-        "del": "5.1.0",
-        "react": "16.12.0",
-        "react-dom": "16.12.0",
-        "@storybook/addon-actions": "5.3.9",
-        "@storybook/addon-backgrounds": "5.3.9",
-        "@storybook/addon-info": "5.3.9",
-        "@storybook/cli": "5.3.9",
-        "@storybook/react": "5.3.9",
-        "@types/jest": "25.1.0",
-        "@types/node": "13.5.0",
-        "@types/react": "16.9.19",
-        "@types/react-dom": "16.9.5",
-        "@types/storybook__react": "4.0.2",
-        "awesome-typescript-loader": "5.2.1",
-        "gulp-typescript": "6.0.0-alpha.1",
-        "gulp-bump": "3.1.3",
-        "gulp-sourcemaps": "2.6.5",
-        "gulp": "4.0.2",
-        "react-docgen-typescript-loader": "3.6.0",
-        "typescript": "3.7.5",
-        "@typescript-eslint/eslint-plugin": "2.18.0",
-        "@typescript-eslint/parser": "2.18.0",
-        "eslint": "6.8.0",
-        "eslint-config-prettier": "6.10.0",
-        "eslint-plugin-prettier": "3.1.2",
-        "moment": "2.24.0",
-        "output-helpers": "git+https://github.com/allbin/output-helpers.git#v2.2.1"
-    },
-    "peerDependencies": {
-        "axios": "0.*",
-        "moment": "2.*",
-        "react": "16.*",
-        "react-dom": "16.*",
-        "output-helpers": "git+https://github.com/allbin/output-helpers.git#v2.2.1"
-    }
+  "name": "error-reporting",
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "gulp build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 6060",
+    "release:patch": "gulp buildAndReleasePatch",
+    "release:minor": "gulp buildAndReleaseMinor",
+    "release:major": "gulp buildAndReleaseMajor"
+  },
+  "dependencies": {
+    "sourcemapped-stacktrace": "1.1.11"
+  },
+  "devDependencies": {
+    "axios": "0.19.2",
+    "del": "5.1.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "@storybook/addon-actions": "5.3.9",
+    "@storybook/addon-backgrounds": "5.3.9",
+    "@storybook/addon-info": "5.3.9",
+    "@storybook/cli": "5.3.9",
+    "@storybook/react": "5.3.9",
+    "@types/jest": "25.1.0",
+    "@types/node": "13.5.0",
+    "@types/react": "16.9.19",
+    "@types/react-dom": "16.9.5",
+    "@types/storybook__react": "4.0.2",
+    "awesome-typescript-loader": "5.2.1",
+    "gulp-typescript": "6.0.0-alpha.1",
+    "gulp-bump": "3.1.3",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp": "4.0.2",
+    "react-docgen-typescript-loader": "3.6.0",
+    "typescript": "3.7.5",
+    "@typescript-eslint/eslint-plugin": "2.18.0",
+    "@typescript-eslint/parser": "2.18.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-prettier": "3.1.2",
+    "moment": "2.24.0"
+  },
+  "peerDependencies": {
+    "axios": "0.*",
+    "moment": "2.*",
+    "react": "16.*",
+    "react-dom": "16.*"
+  }
 }
