--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "del": "5.1.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "@allbin/eslint-config": "0.0.4",
     "@storybook/addon-actions": "5.3.9",
     "@storybook/addon-backgrounds": "5.3.9",
     "@storybook/addon-info": "5.3.9",
