--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-    "name": "error-reporting",
-    "version": "0.1.0",
-    "description": "",
-    "main": "dist/index.js",
-    "scripts": {
-        "release": "gulp4 release",
-        "release:minor": "gulp4 release:minor",
-        "release:major": "gulp4 release:major",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "react": "16.4.1",
-        "axios": "0.18.0",
-        "sourcemapped-stacktrace": "1.1.8"
-    },
-    "devDependencies": {
-        "babel-core": "6.26.0",
-        "babel-eslint": "8.2.3",
-        "babel-preset-env": "1.6.1",
-        "babel-preset-react-app": "3.1.1",
-        "eslint": "4.19.1",
-        "eslint-plugin-import": "2.11.0",
-        "eslint-plugin-react": "7.7.0",
-        "gulp4": "4.0.2",
-        "gulp-babel": "7.0.1",
-        "gulp-bump": "3.1.1",
-        "gulp-allbin": "git+https://bitbucket.org/allbin/gulp-allbin.git#v0.0.6",
-        "gulp-eslint": "4.0.2"
-    },
-    "peerDependencies": {
-        "styled-components": "3.x"
-    }
+  "name": "error-reporting",
+  "version": "0.2.0",
+  "description": "",
+  "main": "dist/index.js",
+  "scripts": {
+    "release": "gulp4 release",
+    "release:minor": "gulp4 release:minor",
+    "release:major": "gulp4 release:major",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "react": "16.4.1",
+    "axios": "0.18.0",
+    "sourcemapped-stacktrace": "1.1.8"
+  },
+  "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.2.3",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react-app": "3.1.1",
+    "eslint": "4.19.1",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-react": "7.7.0",
+    "gulp4": "4.0.2",
+    "gulp-babel": "7.0.1",
+    "gulp-bump": "3.1.1",
+    "gulp-allbin": "git+https://bitbucket.org/allbin/gulp-allbin.git#v0.0.6",
+    "gulp-eslint": "4.0.2",
+    "del": "5.1.0"
+  },
+  "peerDependencies": {
+    "styled-components": "3.x"
+  }
 }
