--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
 
 # production
 /build
+lib
 
 # misc
 .DS_Store
@@ -15,9 +18,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
-package-lock.json
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.vscode/settings.json
+
+.vscode
