--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,7 +11,7 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "jsx": "react",
-    "lib": ["es7", "dom"],
+    "lib": ["es2020", "dom"]
   },
   "exclude": ["node_modules", "lib"]
 }
