--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "typescript": "4.0.3",
     "@allbin/eslint-config-react": "0.0.11",
     "eslint-config-prettier": "6.x",
-    "prettier": "2.x"
+    "prettier": "2.x",
+    "copyfiles": "2.x"
   },
   "peerDependencies": {
     "react": "16.x || 17.x",
