Fixed build command.

--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -16,7 +16,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           scope: '@allbin'
       - run: npm ci
-      - run: npm run build && copyfiles -u 1 "./src/**/*.css" "./lib/"
+      - run: npm run build
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPMJS_TOKEN}}
